# Kree

./: .gitignore  .kreeignore  Cargo.toml  LICENSE  README.md  kreerc.example
.github/workflows/: ci.yml  deploy-web.yml  release.yml
Formula/: kree.rb
docs/: CI_CD.md
kree_cli/: Cargo.toml
kree_cli/src/: config.rs  export.rs  ignore.rs  main.rs  render.rs  search.rs  tree.rs  tui.rs
kree_cli/tests/: integration_test.rs
src/: config.rs  ignore.rs  main.rs  render.rs  search.rs  tree.rs  tui.rs
tests/: integration_test.rs
www/: .gitignore  Cargo.toml  Trunk.toml  index.html  package-lock.json  tailwind.config.js
www/src/: components.rs  main.rs  models.rs  pages_404.rs  pages_downloads.rs  pages_home.rs
