[package]
name = "kree"
version = "0.2.7"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "3.1.1"
crossterm = "0.28"
dirs = "6.0.0"
ratatui = "0.29"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
tempfile = "3"

