[package]
name = "kree"
version = "1.0.0"
edition = "2024"
description = "A directory tree visualizer and fuzzy finder for the terminal"
license = "MIT"
repository = "https://github.com/alexlm78/Kree"
readme = "../README.md"
keywords = ["tree", "cli", "terminal", "directory", "fuzzy-search"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
colored = "3.1.1"
crossterm = "0.28"
dirs = "6.0.0"
globset = "0.4"
ignore = "0.4"
libc = "0.2"
ratatui = "0.29"
rayon = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
toml = "0.9.11"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.3"
tempfile = "3"
